--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
                 <span class="header-actions__text">or</span>
                 <button class="btn btn-light">Create account</button>
             </div>
+
+        </div>
+        <div class="stage">
+            <div class="stage__content">
+                <h1 class="stage__title">Realize your full potential</h1>
+                <p class="stage__text">We help our clients make realize their most important business goals.</p>
+                <div class="stage__actions">
+                    <a href="#" class="btn btn-dark">
+                        Contact Us
+                    </a>
+                    <a href="#" class="link link-arrow">
+                        Order similar
+                    </a>
+                </div>
+            </div>
+            <img src="/img/secondbro.png" alt="stage" height="662px" width="753px">
+            <a href="#" class="btn-bottom"><i class="fa-solid fa-arrow-down"></i></a>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/3464287fa3.js" crossorigin="anonymous"></script>
