--- a/index.html
+++ b/index.html
@@ -75,7 +75,54 @@
                 </div>
             </div>
             <img src="/img/secondbro.png" alt="stage" height="662px" width="753px">
-            <a href="#" class="btn-bottom"><i class="fa-solid fa-arrow-down"></i></a>
+            <a href="#features" class="btn-bottom"><i class="fa-solid fa-arrow-down"></i></a>
+        </div>
+        <div id="features" class="features">
+            <div class="infoblock">
+                <i class="fa-solid fa-dollar-sign"></i>
+                <h2 class="infoblock__title">Corporate finance</h2>
+                <p class="infoblock__text">Leverage agile frameworks to provide a robust synopsis</p>
+                <a href="#" class="link link-arrow infoblock__link">Read more</a>
+            </div>
+            <div class="infoblock">
+                <i class="fa-solid fa-hand-holding-dollar"></i>
+                <h2 class="infoblock__title">Audit & Evaluation</h2>
+                <p class="infoblock__text">Bring to the table win-win survival strategies to ensure proactive</p>
+                <a href="#" class="link link-arrow infoblock__link">Read more</a>
+            </div>
+            <div class="infoblock">
+                <i class="fa-solid fa-sack-dollar"></i>
+                <h2 class="infoblock__title">Market analysis</h2>
+                <p class="infoblock__text">Nibh vel velit auctor aliqunean sollicitudinlorem bibendum auci …</p>
+                <a href="#" class="link link-arrow infoblock__link">Read more</a>
+            </div>
+        </div>
+        <div class="article">
+            <img src="/img/lady.jpg" alt="lady" class="article__image">
+            <div class="article__content">
+                <h2 class="article__title">Get the ultimate tool and learn how to grow your audience</h2>
+                <p class="article__text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque. Many desktop publishing packages and web.</p>
+                <div class="article__actions">
+                    <a href="#" class="btn btn-dark">Get Started</a>
+                    <a href="#" class="link link-arrow">Read more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bg">
+      
+    </div>
+    <div class="wrapper">
+        <div class="article article__reverse">
+            <img src="/img/lady.jpg" alt="lady" class="article__image">
+            <div class="article__content">
+                <h2 class="article__title">Get the ultimate tool and learn how to grow your audience</h2>
+                <p class="article__text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque. Many desktop publishing packages and web.</p>
+                <div class="article__actions">
+                    <a href="#" class="btn btn-dark">Get Started</a>
+                    <a href="#" class="link link-arrow">Read more</a>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/3464287fa3.js" crossorigin="anonymous"></script>
