--- a/index.html
+++ b/index.html
@@ -110,7 +110,13 @@
         </div>
     </div>
     <div class="bg">
-      
+        <div class="bg__content wrapper">
+            <div class="bg__actions">
+                <button class="btn-dark"><i class="fa-solid fa-play"></i></button>
+            </div>
+            <h2 class="bg__title">How it works</h2>
+            <p class="bg__text">This app does everything you could want it to do it<br> is beautifully and extremely intuitive to use.</p>
+        </div>
     </div>
     <div class="wrapper">
         <div class="article article__reverse">
