--- a/index.html
+++ b/index.html
@@ -120,14 +120,47 @@
     </div>
     <div class="wrapper">
         <div class="article article__reverse">
-            <img src="/img/lady.jpg" alt="lady" class="article__image">
-            <div class="article__content">
-                <h2 class="article__title">Get the ultimate tool and learn how to grow your audience</h2>
-                <p class="article__text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque. Many desktop publishing packages and web.</p>
-                <div class="article__actions">
-                    <a href="#" class="btn btn-dark">Get Started</a>
-                    <a href="#" class="link link-arrow">Read more</a>
+            <img src="/img/firstbro.jpg" alt="lady" class="article__image-reverse">
+            <div class="article__content__reverse">
+                <h2 class="article__title">We offer a full range of digital marketing services</h2>
+                <p class="article__text-reverse">Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free.</p>
+                <div class="article__actions-reverse">
+                    <a href="#" class="btn btn-dark">View prices</a>
+                    <a href="#" class="link link-arrow">More info</a>
                 </div>
+            </div>
+        </div>
+        <div class="features__two">
+            <div class="features__actions">
+                <div class="infoblock">
+                    <i class="fa-solid fa-dollar-sign"></i>
+                    <h2 class="infoblock__title">Corporate finance</h2>
+                    <p class="infoblock__text">Leverage agile frameworks to provide a robust synopsis</p>
+                    <a href="#" class="link link-arrow infoblock__link">Read more</a>
+                </div>
+                <div class="infoblock">
+                    <i class="fa-solid fa-hand-holding-dollar"></i>
+                    <h2 class="infoblock__title">Audit & Evaluation</h2>
+                    <p class="infoblock__text">Bring to the table win-win survival strategies to ensure proactive</p>
+                    <a href="#" class="link link-arrow infoblock__link">Read more</a>
+                </div>
+                <div class="infoblock">
+                    <i class="fa-solid fa-sack-dollar"></i>
+                    <h2 class="infoblock__title">Market analysis</h2>
+                    <p class="infoblock__text">Nibh vel velit auctor aliqunean sollicitudinlorem bibendum auci …</p>
+                    <a href="#" class="link link-arrow infoblock__link">Read more</a>
+                </div>
+                <div class="infoblock">
+                    <i class="fa-solid fa-sack-dollar"></i>
+                    <h2 class="infoblock__title">Market analysis</h2>
+                    <p class="infoblock__text">Nibh vel velit auctor aliqunean sollicitudinlorem bibendum auci …</p>
+                    <a href="#" class="link link-arrow infoblock__link">Read more</a>
+                </div>
+            </div>
+            <div class="features__content">
+                <h2 class="features__title">Get a solutions to your businesses</h2>
+                <p class="features__text">Our consultants help address your most challenging issues by providing strategic, financial, operational, and IT services.</p>
+                <a href="#" class="btn btn-dark">All Services</a>
             </div>
         </div>
     </div>
