--- a/index.html
+++ b/index.html
@@ -163,6 +163,16 @@
                 <a href="#" class="btn btn-dark">All Services</a>
             </div>
         </div>
+        <div class="skills">
+            <div class="skills__content">
+                <h2 class="skills__title">Our skills & expertise</h2>
+                <p class="skills__text">We help company set up business strategy including design brand identiy or product design service. So company can focus on their core business.  Morbi accumsan ipsum velit. Nam nec tellus.</p>
+                <a href="#" class="btn btn-dark">We are in the press</a>
+            </div>
+            <div class="skills__bar">
+                <img src="./img/Skill bar.png" alt="skill__bar" class="bar__img">
+            </div>
+        </div>
     </div>
     <script src="https://kit.fontawesome.com/3464287fa3.js" crossorigin="anonymous"></script>
 </body>
