--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
             </div>
         </div>
     </div>
+    <div class="bg__contact">
+        <div class="contact__content wrapper">
+            <h2 class="contact__title">Build your successful business with us. Want to know how to do this?</h2>
+            <a class="btn btn-light">Contact us</a>
+        </div>
+    </div>
     <script src="https://kit.fontawesome.com/3464287fa3.js" crossorigin="anonymous"></script>
 </body>
 </html>
