--- a/index.html
+++ b/index.html
@@ -180,6 +180,59 @@
             <a class="btn btn-light">Contact us</a>
         </div>
     </div>
+    <div class="wrapper">
+        <div class="price__section">
+            <div class="price__items">
+                <div class="price__infoblock">
+                    <div class="price__head">
+                        <h3 class="infoblock__title">Basic</h3>
+                        <a class="price__btn btn" href="#">BEST CHOISE</a>
+                    </div>
+                    <h1 class="price__title">15$</h1>
+                    <div class="price__span">Per month</div>
+                    <ul class="price__list">
+                        <li class="price__list-item"><i class="fa-solid fa-check"></i>Free updates</li>
+                        <li class="price__list-item"><i class="fa-solid fa-check"></i>Custom Domain</li>
+                        <li class="price__list-item"><i class="fa-solid fa-check"></i>Outstanding support</li>
+                        <li class="price__list-item"><i class="fa-solid fa-xmark"></i> Unlimited storage</li>
+                        <li class="price__list-item"><i class="fa-solid fa-xmark"></i> Build responsive website</li>
+                    </ul>
+                    <a href="#" class="btn btn-dark">Getting started</a>
+                </div>
+                <div class="price__infoblock">
+                    <div class="price__head">
+                        <h3 class="infoblock__title">Standart</h3>                        
+                    </div>
+                    <h1 class="price__title">37$</h1>
+                    <div class="price__span">Per month</div>
+                    <ul class="price__list">
+                        <li class="price__list-item"><i class="fa-solid fa-check"></i>Free updates</li>
+                        <li class="price__list-item"><i class="fa-solid fa-check"></i>Custom Domain</li>
+                        <li class="price__list-item"><i class="fa-solid fa-check"></i>Outstanding support</li>
+                        <li class="price__list-item"><i class="fa-solid fa-check"></i>Unlimited storage</li>
+                        <li class="price__list-item"><i class="fa-solid fa-xmark"></i> Build responsive website</li>
+                    </ul>
+                    <a href="#" class="btn btn-dark">Getting started</a>
+                </div>
+                <div class="price__infoblock">
+                    <div class="price__head">
+                        <h3 class="infoblock__title">Advance</h3>                
+                    </div>
+                    <h1 class="price__title">42$</h1>
+                    <div class="price__span">Per month</div>
+                    <ul class="price__list">
+                        <li class="price__list-item"><i class="fa-solid fa-check"></i>Free updates</li>
+                        <li class="price__list-item"><i class="fa-solid fa-check"></i>Custom Domain</li>
+                        <li class="price__list-item"><i class="fa-solid fa-check"></i>Outstanding support</li>
+                        <li class="price__list-item"><i class="fa-solid fa-check"></i>Unlimited storage</li>
+                        <li class="price__list-item"><i class="fa-solid fa-check"></i>Build responsive website</li>
+                    </ul>
+                    <a href="#" class="btn btn-dark">Getting started</a>
+                </div>
+                
+            </div>
+        </div>
+    </div>
     <script src="https://kit.fontawesome.com/3464287fa3.js" crossorigin="anonymous"></script>
 </body>
 </html>
