--- a/index.html
+++ b/index.html
@@ -232,7 +232,57 @@
                 
             </div>
         </div>
+        <div class="support">
+            <div class="support__content">
+                <div class="support__item">
+                    <i class="fa-regular fa-circle-question"></i>
+                    <h2 class="support__title">View common questions</h2>
+                    <p class="support__text">Et harum quidem rerum facilis est et expedita distinctio. Nam<br> libero tempore, cum soluta nobis est eligendi.</p>
+                    <a href="#" class="link link-arrow infoblock__link-sup">Read more</a>
+                </div>
+                <div class="support__item">
+                    <i class="fa-solid fa-headphones-simple"></i>
+                    <h2 class="support__title">Looking for support?</h2>
+                    <p class="support__text">On the other hand, we denounce with righteous dislike so men who are beguiled indignation and  they foresee.</p>
+                    <a href="#" class="link link-arrow infoblock__link-sup">Read more</a>
+                </div>
+            </div>
+        </div>
     </div>
+    <footer class="footer">
+        <div class="footer__content wrapper">
+            <div class="footer__contacts">
+                <h2 class="footer__contacts-title">Contacts</h2>
+                <div class="footer__call">
+                    <i class="fa-solid fa-phone"></i>
+                    <h3 class="footer__call-title">Have questions?</h3>
+                    <a href="tel:+441415523000">+44 141 552 3000</a>
+                </div>
+                <div class="footer__contacts-adress">
+                    <p class="adress">Address: 2 St Gabriel Walk, London SE1<br> 6FG, United Kingdom</p>
+                    <a href="mailto:info@betria.com">E-mail: info@betria.com</a>
+                </div>
+            </div>
+            <div class="footer__links">
+                <h2 class="footer__links-title">Links</h2>
+                <div class="links__flex">
+                    <div class="f__links-one">
+                        <a href="#" class="footer-link">About company</a>
+                        <a href="#" class="footer-link">Our services</a>
+                        <a href="#" class="footer-link">Team members</a>
+                        <a href="#" class="footer-link">Portfolio</a>
+                    </div>
+                    <div class="f__links-two">
+                        <a href="#" class="footer-link">Pricing plans</a>
+                        <a href="#" class="footer-link">Testimonials</a>
+                        <a href="#" class="footer-link">Contact</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__subscribe"></div>
+            <div class="footer__copyright"></div>
+        </div>
+    </footer>
     <script src="https://kit.fontawesome.com/3464287fa3.js" crossorigin="anonymous"></script>
 </body>
 </html>
