--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" rel="stylesheet" />
+    <link type="image/png" sizes="32x32" rel="icon" href="https://cdn-icons-png.flaticon.com/512/924/924915.png">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
     <title>Maket</title>
@@ -273,15 +274,27 @@
                         <a href="#" class="footer-link">Portfolio</a>
                     </div>
                     <div class="f__links-two">
-                        <a href="#" class="footer-link">Pricing plans</a>
+                        <a href="#" class="footer-link">Pricing</a>
                         <a href="#" class="footer-link">Testimonials</a>
                         <a href="#" class="footer-link">Contact</a>
                     </div>
                 </div>
             </div>
-            <div class="footer__subscribe"></div>
-            <div class="footer__copyright"></div>
+            <div class="footer__subscribe">
+                <h2 class="subscribe__title">Subscribe</h2>
+                <div class="box">
+                    <div class="container-3">
+                        <a href="#"><span class="icon"><i class="fa-brands fa-mailchimp"></i></span></a>
+                        <input type="search" id="search" placeholder="Enter your email..." />
+                    </div>
+                </div>
+                <p class="sub__text">
+                    Keep up to date with all new<br> themes and updates.
+                </p>
+            </div>
         </div>
+        <div class="footer__copyright wrapper">© Gipnosis 2022. Landing Page Template by Liashevich</div>
+        
     </footer>
     <script src="https://kit.fontawesome.com/3464287fa3.js" crossorigin="anonymous"></script>
 </body>
