--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <div class="support__item">
                     <i class="fa-solid fa-headphones-simple"></i>
                     <h2 class="support__title">Looking for support?</h2>
-                    <p class="support__text">On the other hand, we denounce with righteous dislike so men who are beguiled indignation and  they foresee.</p>
+                    <p class="support__text">On thee other hand, we denounce with righteous dislike so men who are beguiled indignation and  they foresee.</p>
                     <a href="#" class="link link-arrow infoblock__link-sup">Read more</a>
                 </div>
             </div>
