--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="wrapper">
         <div class="header">
             <div class="header-navbar">
-                <a href="#" class="header__logo"><img src="/img/Logo.jpg" alt="logo"></a>
+                <a href="#" class="header__logo"><img src="./img/Logo.jpg" alt="logo"></a>
                 <ul class="header__menu">
                     <li class="header__menu-item">
                         <a href="#" class="header__menu-link header__menu-link_active">Home</a>
@@ -75,7 +75,7 @@
                     </a>
                 </div>
             </div>
-            <img src="/img/secondbro.png" alt="stage" height="662px" width="753px">
+            <img src="./img/secondbro.png" alt="stage" height="662px" width="753px">
             <a href="#features" class="btn-bottom"><i class="fa-solid fa-arrow-down"></i></a>
         </div>
         <div id="features" class="features">
